--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "todo"
+    "url": "https://github.com/zacbarton/node-uuencode"
   },
   "keywords": [
     "uuencode"
